# trello-cli-rs

./: .gitignore  Cargo.toml  config.json.example
src/: main.rs  trello.rs
src/util/: mod.rs
test_data/: 1b340.json  27bb1.json  47259.json  ac3bc.json  boards.json  c51bd.json  da3e9.json  dbb2c.json  fc2087.json
test_data/5533cd/lists/: c51bd.json  dbb2c.json  lists.json
test_data/acef9/lists/: 1b340.json  lists.json
