[package]
name = "trello-cli"
version = "0.1.0"
authors = ["Kaleb Smart <kalebsma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.8", features = ["blocking"] }
json = "0.12.4"
tui = {version = "0.10.0", features = ["termion"] }
termion = "1.5.5"
rand = "0.7.3"
fern = "0.6.0"
chrono = "0.4.13"
log = "0.4.0"

[dev-dependencies]
mockall = "0.8.0"
